# jobhunter-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.lambda  LICENSE  PROJECT_PLAN.md  README.md  WORKFLOW.md  alembic.ini  docker-compose.yml  job-agent  jobs-export.csv  mypy.ini  prometheus.yml  pyproject.toml  requirements-lambda.txt  requirements.txt  samconfig.toml  template.yaml
.github/: CODE_QUALITY.md  dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
data/: cv.md
grafana/: lambda-dashboard.json
scripts/: backfill_cv_skills.py
src/: __init__.py  application_tracker.py  cli.py  cv_parser.py  data_exporter.py  database.py  incremental.py  job_matcher.py  job_searcher.py  lambda_handler.py  logging_config.py  metrics.py  models.py  prometheus_exporter.py  s3_sync.py  user_profile.py  worker.py
systemd/: jobhunter-prometheus.service  jobhunter-worker.service
tests/: __init__.py  test_adzuna_scraper.py  test_application_tracker.py  test_ashby_scraper.py  test_cli.py  test_cli_scrape.py  test_cv_parser.py  test_data_exporter.py  test_database.py  test_greenhouse_scraper.py  test_incremental.py  test_job_matcher.py  test_job_matcher_unit.py  test_job_searcher.py  test_lambda_handler.py  test_lever_scraper.py  test_linkedin_scraper.py  test_logging_config.py  test_metrics_cli.py  test_prometheus_exporter.py  test_reed_scraper.py  test_s3_sync.py  test_scraper_metrics.py  test_scrapers.py  test_themuse_scraper.py  test_thoughtworks_scraper.py  test_user_profile.py  test_worker.py
(+69 files in other folders)
